# openenvscaler

./: .env  .gitignore  Dockerfile  README.md  app.py  client.py  customer_support_environment.py  daigram.md  data_loader.py  inference.py  kb.py  models.py  openenv.yaml  pre_submission_validate.py  pyproject.toml  requirements.txt  tasks.py  test_api_smoke.py
server/: app.py  customer_support_environment.py
